@@ -1,6 +1,6 @@
 use Mojo::Base -strict;
 
-use Test::More tests => 87;
+use Test::More tests => 89;
 
 # "People said I was dumb, but I proved them."
 use Mojo::ByteStream 'b';
@@ -189,12 +189,13 @@ $result = $pattern->match('/foo/v1.0', 1);
 is $result->{test},   'foo',   'right value';
 is $result->{action}, 'index', 'right value';
 ok !$result->{format}, 'no value';
-is $pattern->render({test => '23'}), '/23/v1.0', 'right result';
+is $pattern->render($result), '/foo/v1.0', 'right result';
+is $pattern->render($result, 1), '/foo/v1.0', 'right result';
 $result = $pattern->match('/foo/v1.0.txt', 1);
 is $result->{test},   'foo',   'right value';
 is $result->{action}, 'index', 'right value';
 is $result->{format}, 'txt',   'right value';
-is $pattern->render({test => '23', format => 'txt'}), '/23/v1.0',
-  'right result';
+is $pattern->render($result), '/foo/v1.0', 'right result';
+is $pattern->render($result, 1), '/foo/v1.0.txt', 'right result';
 $result = $pattern->match('/foo/v2.0', 1);
 is $result, undef, 'no result';
