@@ -1,6 +1,8 @@
 This file documents the revision history for Perl extension Mojolicious.
 
 2.82  2012-04-16
+  - Improved Mojolicious::Routes::Pattern to render formats.
+  - Improved documentation.
   - Improved tests.
 
 2.81  2012-04-15
